--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,29 +1,28 @@
 /* Mobile: with < 740px */
 @media only screen and (max-width: 46.1875em){
-	
+    /* slider respon */
+    .slider-container {
+        height: 350px;
+    }
 }
 /* Tablet: width >= 740px and width < 1024px */
 @media only screen and (min-width: 46.25em) and (max-width: 63.9375em){
-
+    /* slider respon */
+    .slider-container {
+        height: 500px;
+    }
 }
 /* Mobile and Tablet: width < 1024px */
 @media only screen and (max-width: 63.9375em){
+    /* header respon */
     .header-nav {
         display: none;
     }
-    .section {
-        padding-top: 0;
+    .respon-bar-icon {
+        display: block;
     }
 }
 /* PC: width >= 1024px */
 @media only screen and (min-width: 64em){
-    .respon-nav {
-        display: none;
-    }
-    .respon-bar-icon{
-        display: none;
-    }
-    .respon-overlay{
-        display: none;
-    }
+    
 }
