--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,6 @@ body {
 }
 .container{
     width: 100%;
-    height: 9000px;
     background: linear-gradient(90deg, #0043A8 0%, #00114B 100%);
     position: relative;
 }
@@ -254,6 +253,7 @@ body {
     line-height: 42px;
     letter-spacing: 0.02em;
     text-align: center;
+    /* margin-top: 30px; */
 }
 .tabs {
     margin-top: 20px;
@@ -273,10 +273,13 @@ body {
     background-color: var(--hover);
     position: absolute;
     height: 4px;
+    border-radius: 5px;
     transition: .25s linear; 
 }
 .panels > .panel__item {
+    width: 100%;
     display: none;
+    text-align: center;
 }
 .panels > .panel__item.active {
     display: block;
@@ -394,16 +397,15 @@ body {
     color: var(--hover);
 }
 .more-btn {
+    display: inline-block;
+    max-width: 300px;
     outline: none;
     color: white;
     border: 2px solid white;
-    padding: 12px 38px;
+    padding: 16px 60px;
     text-transform: uppercase;
-    border-radius: 5px;
-    position: absolute;
-    margin-top: 30px;  
-    left: 50%;
-    transform: translateX(-50%);
+    border-radius: 5px; 
+    margin-top: 30px;
     transition: .2s linear;
 }
 .more-btn:hover {
@@ -455,4 +457,367 @@ body {
 }
 .respon-bar-icon {
     display: none;
+}
+/* pre-built keyboard */
+.prebuilt-keyboard-section{
+
+}
+.section-slogan{
+    color: var(--maincolor);
+    font-weight: 700;
+    font-size: 22px;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-block: 45px;
+}
+.section-product{
+    /* flex-wrap: wrap; */
+    align-items: start;
+}
+.pre-built-product .product__banner{
+    width: 40%;
+    aspect-ratio: 1;
+    position: relative;
+}
+.pre-built-product .product__banner img {
+    width: 100%;
+    height: 100%;
+}
+.pre-built-product .product__banner .product__overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.2s ease;
+}
+.pre-built-product .product__banner:hover > .product__overlay {
+    opacity: 1;
+    visibility: visible;
+}
+.pre-built-product .product__banner .product__overlay .overlay-btn {
+    color: white;
+    font-size: 18px;
+    border: 1px solid white;
+    padding: 16px 48px;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition: .2s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.pre-built-product .overlay-btn:hover {
+    background: white;
+    color: black !important;
+}
+.pre-built-product .product__detail{
+    align-items: flex-start;
+    gap: 12px;
+    flex-grow: 1;
+    margin: 0;
+    color: white;
+}
+.product__detail--name{
+    font-weight: 700;
+    font-size: 22px;
+    letter-spacing: 0.02em;
+}
+.product__detail--price{
+    color: var(--hover);
+    font-weight: 700;
+    font-size: 28px;
+    letter-spacing: 0.02em;
+}
+.product__detail--title{
+    font-weight: 700;
+    font-size: 22px;
+    letter-spacing: 0.02em;
+}
+.product__detail--specs{
+    padding-left: 40px;
+}
+.spec__item{
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    line-height: 28px;
+}
+.spec__item__link {
+    color: var(--hover);
+    text-transform: uppercase;
+}
+.explore-btn{
+    color: white;
+    border: 2px solid white;
+    padding: 12px 60px;
+    transition: .2s cubic-bezier(0.86, 0, 0.07, 1);
+}
+.explore-btn:hover{
+    background: var(--maincolor);
+    border: 2px solid var(--maincolor);
+}
+.wait-list{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
+}
+.wait-list-detail{
+    gap: 0;
+    margin-top: 45px; 
+    align-items: flex-start;
+    width: 80%;
+}
+.wait-list__banner{
+    flex-grow: 1;
+    aspect-ratio: 1.2/1;
+    overflow: hidden;
+}
+.wait-list__banner:hover img {
+    transform: scale(1.5)
+}
+.wait-list__banner img {
+    width: 100%;
+    height: 100%;
+    transition: 2s cubic-bezier(0.23, 1, 0.320, 1)
+}
+.wait-list__content{
+    padding: 0 20px;
+    display:flex;
+    flex-direction:column;
+    justify-content: start;
+    gap: 20px;
+    width: 60%;
+}
+.content__title{
+    margin-block: 10px;
+    color: var(--maincolor);
+    letter-spacing: 0.02em;
+    font-weight: 700;   
+    font-size: 22px;
+    line-height: 33px;
+}
+.content-detail{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: white;
+}
+.form-group{
+    margin-bottom: 20px;
+}   
+.form-group > input {
+    width: 100%;
+    height: 60px;
+    outline: none;
+    background: rgba(66, 130, 255, 0.4);
+    color: black;
+    padding: 0 20px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    transition: .2s linear;
+}
+.form-group > input:hover {
+    background: white;
+}
+.form-group > input:focus {
+    background: white;
+    border-color: var(--maincolor);
+}
+.form-btn{
+    display: block;
+    color: white;
+    border: 2px solid var(--maincolor);
+    padding: 12px 48px;
+    width: fit-content;
+    margin-top: 20px;
+    transition: .2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.form-btn:hover {
+    background: var(--maincolor);
+}
+.all-products-section{
+
+}
+.product-selection__wrapper{
+    margin-top: 45px;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+.selection__item{
+    width: 435px;
+    aspect-ratio: 1;
+}
+.selection__item__banner{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.selection__item__banner:hover img{
+    transform: scale(1.5)
+}
+.selection__item__banner img {
+    width: 100%;
+    height: 100%;
+    transition: 2s cubic-bezier(0.19, 1, 0.22, 1);
+}
+.selection__overlay{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 60px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.2) 100%);
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.selection__overlay .overlay__content {
+    width: 100%;
+    display:flex;
+    justify-content:center;
+    flex-direction:column;
+    gap: 20px;
+}
+.selection__overlay .overlay__content h5 {
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 12px;
+    letter-spacing: 0.02em;
+    font-weight: 700;
+    color: white;
+}
+.selection__name{
+    font-weight: 900;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.02em;
+    color: var(--hover);
+}
+.overlay__btn{
+    align-self: center;
+    color: white;
+    padding: 12px 48px;
+    border: 2px solid white;
+    transition: .2s cubic-bezier(0.215, 0.610, 0.355, 1)
+}
+.overlay__btn:hover {
+    background: white;
+    color: black;
+}
+.feedbacks-wrapper{
+    margin-top: 45px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.feedback__item{
+    width: 435px;
+    display: flex;
+    padding: 32px 20px;
+    background: rgba(217, 217, 217, 0.3);
+    border-radius: 10px;    
+}
+.feedback__item__avt{
+    width: 80px;
+    height: 80px;
+    border-radius: 100rem;
+    flex-basis: 80px;
+    flex-shrink: 0;
+    background-position: center;
+}
+.feedback__item__content{
+    padding-inline: 20px;
+    color: white;
+}
+.content__name{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+}
+.content__product__name{
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 18px;
+    color: #C7C7C7;
+    letter-spacing: 0.02em;
+}
+.content__feedback__detail{
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 0.02em;
+}
+footer {
+    padding: 60px 80px;
+    flex-direction: column;
+}
+.footer .logo {
+    align-self: flex-start;
+}
+.footer__top{
+    width: 100%;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.follow-us{
+    width: 330px;
+    display:flex;
+    flex-direction:column;
+    gap: 20px;
+}
+.logo a{
+    text-decoration: none !important;
+    color: white;
+}
+.follow-us-content{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0.02em;
+    color: white;
+}
+.form__btn{
+    display: block;
+    width: fit-content;
+    padding: 12px 48px;
+    border: 1px solid var(--maincolor);
+    color: var(--maincolor);
+    margin-top: 10px;
+    transition: .2s cubic-bezier(0.19, 1, 0.22, 1)
+}
+.form__btn:hover {
+    background: var(--maincolor);
+    color: white;
+}
+.nav__title,
+.footer__nav .nav__link {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 0.02em;
+    color: white;
+}
+.nav__title {
+    margin-bottom: 20px;
+    color: var(--maincolor);
+}
+.footer__nav .nav__link:hover {
+    color: var(--hover);
+}
+footer.right-reserved {
+    padding: 20px;
+    color: white;
+    text-align: center;
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
 }
