--- a/sass/css/app.css
+++ b/sass/css/app.css
@@ -1416,11 +1416,11 @@ a {
   overflow-x: hidden;
 }
 .light .section--forest .banner--forest {
-  background-image: url(./assets/image/forest.50330d7d.svg);
+  background-image: url(/assets/image/forest.50330d7d.svg);
   padding-bottom: 33.333%;
 }
 .light .section--forest .mask__img--wave {
-  background-image: url(./assets/image/secondary-l.4f7324ff.svg);
+  background-image: url(/assets/image/secondary-l.4f7324ff.svg);
   padding-bottom: 10%;
 }
 .light .section--project {
@@ -1499,7 +1499,7 @@ a {
   transition: 0.25s linear;
 }
 .light .section--project .project__card__wrapper .project__card .project__card__banner .mask__img {
-  mask-image: url("./assets/image/secondary-l.4f7324ff.svg");
+  mask-image: url("/assets/image/secondary-l.4f7324ff.svg");
   position: absolute;
   bottom: 0;
   left: 0;
